Build docker image with fabric8 plugin